docs/7.52/quick-ref/abap-topics-index.md
# ABAP Topics Index

**📖 Source Documentation**: [ABAP Keyword Documentation 7.52](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/index.htm)
**🔍 Search All Topics**: Use `abap_search` with any keyword below
**📚 Get Complete Bundles**: Use `abap_get` with specific bundle IDs


**Version**: 7.52
**Generated**: 2025-09-01T11:14:58.766Z

## Major Topics

- **CDS** - [Search bundles](abap_search?query=cds)
- **CLASSES** - [Search bundles](abap_search?query=classes)
- **EXCEPTIONS** - [Search bundles](abap_search?query=exceptions)
- **OBJECTS** - [Search bundles](abap_search?query=objects)
- **SQL** - [Search bundles](abap_search?query=sql)
- **TABLES** - [Search bundles](abap_search?query=tables)
- **TYPES** - [Search bundles](abap_search?query=types)

## By Difficulty

### Beginner
- ABAP - Keyword Documentation / ABAP - Overview / ABAP Programs in AS ABAP
- ABAP - Keyword Documentation / ABAP - Overview / ABAP Character Set
- ABAP - Keyword Documentation / ABAP - Reference / Declarations / Declaration Statements / Data Types and Data Objects / Types and Objects - Overview / Data Objects / References
- ABAP - Keyword Documentation / ABAP - Reference / Declarations / Declaration Statements / Data Types and Data Objects / Types and Objects - Overview / Data Objects / Memory Management of Deep Objects
- ABAP - Keyword Documentation / ABAP - Reference / Declarations / Declaration Statements / Classes and Interfaces / ABAP Objects - Overview / Classes / Components of Classes / Methods of Classes
- ABAP - Keyword Documentation / ABAP - Reference / Declarations / Declaration Statements / Classes and Interfaces / ABAP Objects - Overview / Classes / Components of Classes / Constructors of Classes
- ABAP - Keyword Documentation / ABAP - Reference / Declarations / Declaration Statements / Classes and Interfaces / ABAP Objects - Overview / Inheritance
- ABAP - Keyword Documentation / ABAP - Reference / Declarations / Declaration Statements / Classes and Interfaces / ABAP Objects - Overview / Interfaces
- ABAP - Keyword Documentation / ABAP - Reference / Declarations / Declaration Statements / Classes and Interfaces / ABAP Objects - Overview / Objects
- ABAP - Keyword Documentation / ABAP - Reference / Declarations / Declaration Statements / Classes and Interfaces / ABAP Objects - Overview / Statements in ABAP Objects

### Advanced
- ABAP - Keyword Documentation / ABAP - Dictionary / ABAP CDS in ABAP Dictionary / ABAP CDS - Syntax
- ABAP - Keyword Documentation / ABAP - Dictionary / ABAP CDS in ABAP Dictionary / ABAP CDS - Annotations / ABAP CDS - Definition of Annotations
- ABAP - Keyword Documentation / ABAP - Dictionary / ABAP CDS in ABAP Dictionary / ABAP CDS - Annotations / ABAP CDS - Specifying Annotations / ABAP CDS - Annotation Syntax
- ABAP - Keyword Documentation / ABAP - Dictionary / ABAP CDS in ABAP Dictionary / ABAP CDS - Annotations / ABAP CDS - Specifying Annotations / ABAP CDS Metadata Extensions
- ABAP - Keyword Documentation / ABAP - Dictionary / ABAP CDS in ABAP Dictionary / ABAP CDS - Annotations / ABAP CDS - Evaluation of Annotations
- ABAP - Keyword Documentation / ABAP - Dictionary / ABAP CDS in ABAP Dictionary / ABAP CDS - Annotations / ABAP CDS - SAP Annotations / ABAP CDS - ABAP Annotations
- ABAP - Keyword Documentation / ABAP - Dictionary / ABAP CDS in ABAP Dictionary / ABAP CDS - Annotations / ABAP CDS - SAP Annotations / ABAP CDS - Framework-Specific Annotations / ABAP CDS - Framework-Specific Annotation Syntax
- ABAP - Keyword Documentation / ABAP - Dictionary / ABAP CDS in ABAP Dictionary / ABAP CDS - Data Definitions / ABAP CDS - Views / ABAP CDS - Client Handling in CDS Views
- ABAP - Keyword Documentation / ABAP - Dictionary / ABAP CDS in ABAP Dictionary / ABAP CDS - Data Definitions / ABAP CDS - Table Functions
- ABAP - Keyword Documentation / ABAP - Dictionary / ABAP CDS in ABAP Dictionary / ABAP CDS - Data Definitions / ABAP CDS - DDL for Data Definitions / ABAP CDS - DEFINE VIEW / ABAP CDS - SELECT / ABAP CDS - SELECT, data_source