docs/7.55/quick-ref/abap-topics-index.md
# ABAP Topics Index

**📖 Source Documentation**: [ABAP Keyword Documentation 7.55](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/index.htm)
**🔍 Search All Topics**: Use `abap_search` with any keyword below
**📚 Get Complete Bundles**: Use `abap_get` with specific bundle IDs


**Version**: 7.55
**Generated**: 2025-09-01T11:14:58.046Z

## Major Topics

- **CDS** - [Search bundles](abap_search?query=cds)
- **CLASSES** - [Search bundles](abap_search?query=classes)
- **EXCEPTIONS** - [Search bundles](abap_search?query=exceptions)
- **OBJECTS** - [Search bundles](abap_search?query=objects)
- **SQL** - [Search bundles](abap_search?query=sql)
- **TABLES** - [Search bundles](abap_search?query=tables)
- **TYPES** - [Search bundles](abap_search?query=types)

## By Difficulty

### Beginner
- ABAP - Keyword Documentation / ABAP - Programming Language / ABAP - Overview / ABAP Programs on the AS ABAP
- ABAP - Keyword Documentation / ABAP - Programming Language / Declarations / Declaration Statements / Data Types and Data Objects / Types and Objects, Overview / Data Objects / References
- ABAP - Keyword Documentation / ABAP - Programming Language / Declarations / Declaration Statements / Data Types and Data Objects / Types and Objects, Overview / Data Objects / Memory Management of Deep Objects
- ABAP - Keyword Documentation / ABAP - Programming Language / Declarations / Declaration Statements / Classes and Interfaces (ABAP Objects) / ABAP Objects - Overview / ABAP Objects - Classes / ABAP Objects - Components of Classes / ABAP Objects - Methods of Classes
- ABAP - Keyword Documentation / ABAP - Programming Language / Declarations / Declaration Statements / Classes and Interfaces (ABAP Objects) / ABAP Objects - Overview / ABAP Objects - Classes / ABAP Objects - Components of Classes / ABAP Objects - Constructors of Classes
- ABAP - Keyword Documentation / ABAP - Programming Language / Declarations / Declaration Statements / Classes and Interfaces (ABAP Objects) / ABAP Objects - Overview / ABAP Objects - Inheritance
- ABAP - Keyword Documentation / ABAP - Programming Language / Declarations / Declaration Statements / Classes and Interfaces (ABAP Objects) / ABAP Objects - Overview / ABAP Objects - Interfaces
- ABAP - Keyword Documentation / ABAP - Programming Language / Declarations / Declaration Statements / Classes and Interfaces (ABAP Objects) / ABAP Objects - Overview / ABAP Objects - Objects
- ABAP - Keyword Documentation / ABAP - Programming Language / Declarations / Declaration Statements / Classes and Interfaces (ABAP Objects) / ABAP Objects - Overview / ABAP Objects - Statements in ABAP Objects
- ABAP - Keyword Documentation / ABAP - Programming Language / Declarations / Declaration Statements / Classes and Interfaces (ABAP Objects) / ABAP Objects - Overview / ABAP Objects - Examples

### Advanced
- ABAP - Keyword Documentation / ABAP - Core Data Services (ABAP CDS) / ABAP CDS - Syntax
- ABAP - Keyword Documentation / ABAP - Core Data Services (ABAP CDS) / ABAP CDS - Annotations / ABAP CDS - Definition of Annotations
- ABAP - Keyword Documentation / ABAP - Core Data Services (ABAP CDS) / ABAP CDS - Annotations / ABAP CDS - Specifying Annotations / CDS DDL - Annotation Syntax
- ABAP - Keyword Documentation / ABAP - Core Data Services (ABAP CDS) / ABAP CDS - Annotations / ABAP CDS - Specifying Annotations / ABAP CDS - Metadata Extensions / ABAP CDS - DDL for Metadata Extensions
- ABAP - Keyword Documentation / ABAP - Core Data Services (ABAP CDS) / ABAP CDS - Annotations / ABAP CDS - Evaluation of Annotations
- ABAP - Keyword Documentation / ABAP - Core Data Services (ABAP CDS) / ABAP CDS - Annotations / ABAP CDS - SAP Annotations / ABAP CDS - ABAP Annotations
- ABAP - Keyword Documentation / ABAP - Core Data Services (ABAP CDS) / ABAP CDS - Data Definitions / ABAP CDS - DDL for Data Definitions / ABAP CDS - CDS Entities / ABAP CDS - View Entities / CDS DDL - DEFINE VIEW ENTITY / CDS DDL - CDS View Entity, SELECT / CDS DDL - CDS View Entity, SELECT, data_source
- ABAP - Keyword Documentation / ABAP - Core Data Services (ABAP CDS) / ABAP CDS - Data Definitions / ABAP CDS - DDL for Data Definitions / ABAP CDS - CDS Entities / ABAP CDS - View Entities / CDS DDL - DEFINE VIEW ENTITY / CDS DDL - CDS View Entity, SELECT / CDS DDL - CDS View Entity, SELECT, Associations
- ABAP - Keyword Documentation / ABAP - Core Data Services (ABAP CDS) / ABAP CDS - Data Definitions / ABAP CDS - DDL for Data Definitions / ABAP CDS - CDS Entities / ABAP CDS - View Entities / CDS DDL - DEFINE VIEW ENTITY / CDS DDL - CDS View Entity, SELECT / CDS DDL - CDS View Entity, SELECT, select_list
- ABAP - Keyword Documentation / ABAP - Core Data Services (ABAP CDS) / ABAP CDS - Data Definitions / ABAP CDS - DDL for Data Definitions / ABAP CDS - CDS Entities / ABAP CDS - View Entities / CDS DDL - DEFINE VIEW ENTITY / CDS DDL - CDS View Entity, SELECT / CDS DDL - CDS View Entity, SELECT, clauses